<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_TakeExposure" Id="{11bb66b9-b6f6-4ca3-976d-d6d3453bec8a}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_TakeExposure EXTENDS ST_MsgToPLC:
STRUCT
    tExposureTime: TIME;
	fSpeed		 : LREAL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>